--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "description": "> Webpack 4",
   "main": "index.js",
   "scripts": {
-    "build": "webpack --mode production",
-    "dev": "webpack --mode production",
-    "server": "webpack-dev-server --inline --https --open --hot --devtool eval --progress --colors --config webpack.config.js"
+    "serve": "vue-cli-service serve",
+    "build": "vite build",
+    "dev": "vite"
   },
   "keywords": [],
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "@vitejs/plugin-vue": "^1.9.3",
     "autoprefixer-loader": "^3.2.0",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
@@ -41,6 +42,7 @@
     "svg-sprite-generator": "0.0.7",
     "svg-sprite-loader": "^3.8.0",
     "symbol-observable": "^1.2.0",
+    "vite": "^2.6.4",
     "vue-hamburger": "^0.1.2",
     "vue-loader": "^14.1.1",
     "vue-resource": "^1.2.1",
@@ -84,7 +86,7 @@
     "uglifyjs-webpack-plugin": "^1.2.7",
     "url-loader": "^1.0.1",
     "vanilla-tilt": "^1.4.1",
-    "vue": "^2.5.13",
+    "vue": "^3.2.13",
     "vue-awesome-swiper": "^3.1.3",
     "vue-eslint-parser": "^3.0.0",
     "vue-perfect-scrollbar": "^0.1.0",
